# KB-Database

./: .gitignore  README.md  USERMANUAL.md  build-exe.bat  build.py  deepsearch.py  main.py  pyproject.toml  run-dev.bat  scan.py  search.py
backend/: main.py  models.py
backend/routers/: chat.py  deepsearch.py  graph.py  scan.py  search.py  web.py
backend/services/: bm25.py  chat.py  config.py  graph.py  graphify_patcher.py  scanner.py  web.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: ChatView.vue  DeepSearchView.vue  GraphView.vue  ResultCard.vue  ScanView.vue  SearchView.vue  SettingsPanel.vue  Sidebar.vue
frontend/src/composables/: useApi.js
frontend/src/styles/: main.css
