[project]
name = "articledatabase"
version = "0.3.3"
description = "Article Database with BM25 search, Ollama scan, web search/fetch, knowledge graph, and web UI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rank-bm25>=0.2.2",
    "requests>=2.34.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "httpx>=0.28.1",
    "ddgs>=9.14.4",
    "tavily-python>=0.7.0",
    "openai>=2.43.0",
    "graphifyy>=0.8.46",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]
